--- a/01-expressmovies/views/login.ejs
+++ b/01-expressmovies/views/login.ejs
@@ -8,15 +8,24 @@
     <body>
         <div class="central">
             <% include ./partials/header %>
-            <h1>Page de connection </h1>
-            <div>
+            <h1><%= title %></h1>
+            <div class="loginContainer">
                 <form >
                     <label for="login">Login : </label><input type="text" name="login" class="login">
                     <label for="mdp">Password : </label><input type="password" name="mdp" class="mdp">
                     <button type="submit">Se connecter</button>
                 </form>
             </div>
+            <div class="signoutContainer" style="display:none;">
+                <h3 class="emailUser"></h3>
+                <div>
+                    <a href="#" class="memberOnly" name="member-only">Espace membre</a>
+                </div>
+               <button>deconnection</button> 
+            </div>
         </div>
         <% include ./partials/footer %>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="/public/js/login.js"></script>
     </body>
 </html>
