--- a/01-expressmovies/views/movie-search.ejs
+++ b/01-expressmovies/views/movie-search.ejs
@@ -17,33 +17,7 @@
             </div>
         </div>
         <% include ./partials/footer %>
-        <script>
-            const form = document.querySelector('form');
-            function addMovie(){
-                event.preventDefault();
-                if(fetch){
-                    fetch("/login",{
-                        method: 'POST',
-                        body: new FormData(form)
-                    })
-                    .then(checkStatus)
-                    .catch((err)=>{
-                        console.error(err);
-                    });
-                }
-
-            };
-            function checkStatus(response){
-                if(response.status >= 200 && response.status <300){
-                    let newMovieDiv = document.createElement('div');
-                    const login = document.querySelector('input.movieTitle').value;
-                    const movieYear = document.querySelector('input.movieYear').value;
-                    newMovieDiv.innerHTML = ` ${movieTitle} - ${movieYear}`;
-                    document.querySelector('.frenchMovies').appendChild(newMovieDiv);
-                    form.reset();
-                }
-            }
-            form.addEventListener('submit', addMovie);
-        </script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="/public/js/movieSearch.js"></script>
     </body>
 </html>
