--- a/01-expressmovies/views/movies.ejs
+++ b/01-expressmovies/views/movies.ejs
@@ -11,7 +11,7 @@
             <h1><%=title %></h1>
             <div class="frenchMovies">
                     <% for(movie of frenchMovies ) { %>
-                        <div><%= movie.title %> - <%= movie.year %> </div>
+                        <div><%= movie.movieTitle %> - <%= movie.movieYear %> </div>
                     <% } %>
             </div>
             <br>
